# ML-Compiler-Bridge

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  annotated.html  classes.html  compile_commands.json  dir_000001_000004.html  dir_000005_000004.html  dir_000006_000010.html  dir_000007_000004.html  dir_000009_000005.html  dir_000010_000006.html  dir_000011_000005.html  dir_000012_000004.html  dir_000012_000005.html  dir_000014_000004.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_140b5756de018b5a527d1fcef32c0414.html  dir_140b5756de018b5a527d1fcef32c0414_dep.map  dir_140b5756de018b5a527d1fcef32c0414_dep.md5  dir_20bfb6810f9215af3b085f0b6b86aa7b.html  dir_20bfb6810f9215af3b085f0b6b86aa7b_dep.map  dir_20bfb6810f9215af3b085f0b6b86aa7b_dep.md5  dir_31ce97fa17ebf78279b07eb7ddad403e.html  dir_31ce97fa17ebf78279b07eb7ddad403e_dep.map  dir_31ce97fa17ebf78279b07eb7ddad403e_dep.md5  dir_3676ed060da7b11e583c94bd430df0f2.html  dir_3676ed060da7b11e583c94bd430df0f2_dep.map  dir_3676ed060da7b11e583c94bd430df0f2_dep.md5  dir_5e04fca4119741a0bf494ce528aff5e5.html  dir_5e04fca4119741a0bf494ce528aff5e5_dep.map  dir_5e04fca4119741a0bf494ce528aff5e5_dep.md5  dir_6bf3ce180588f6c0a8d01399b8fddcc4.html  dir_6bf3ce180588f6c0a8d01399b8fddcc4_dep.map  dir_6bf3ce180588f6c0a8d01399b8fddcc4_dep.md5  (+160 more)
.github/workflows/: build.yml  main.yml  mlbridge_build.sh  upload_pypi.yml  wheel.yml
CompilerInterface/: BaseCompilerInterface.py  GrpcCompilerInterface.py  PipeCompilerInterface.py  SerDes.py  fetch_version.py  hello-mlbridge.py  log_reader.py  mlbridge-test.py  pyproject.toml  setup.cfg
CompilerInterface/compilerinterface/: BaseCompilerInterface.py  GrpcCompilerInterface.py  PipeCompilerInterface.py  SerDes.py  __init__.py  log_reader.py
Include/: test.h
Include/MLModelRunner/: MLModelRunner.h  MLModelRunnerWithTensorSpec.h  PipeModelRunner.h  TFModelRunner.h  gRPCModelRunner.h
Include/SerDes/: TensorSpec.h  baseSerDes.h  bitstreamSerDes.h  jsonSerDes.h  protobufSerDes.h
MLModelRunner/: CMakeLists.txt  PipeModelRunner.cpp
MLModelRunner/C/: CMakeLists.txt  ONNXModelRunnerCWrapper.cpp  PipeModelRunnerCWrapper.cpp
MLModelRunner/ONNXModelRunner/: CMakeLists.txt  ONNXModelRunner.cpp  README.md  agent.cpp  onnx.cpp
MLModelRunner/Utils/: CMakeLists.txt  JSON.cpp  MLConfig.cpp  TensorSpec.cpp  TrainingLogger.cpp  TrainingLogger.cpp.xxx
MLModelRunner/gRPCModelRunner/: CMakeLists.txt  README.md  server-rllib.py
MLModelRunner/gRPCModelRunner/Protos/: LoopDistribution.proto  RegisterAllocationInference.proto  demoPass.proto  helloMLBridge.proto  posetRL.proto
MLModelRunner/gRPCModelRunner/Python-Utilities/: .gitignore  client.py  client_demo.py  example_client.py  loopDistributionClient.py  server-rllib-sm.py  server-rllib.py  server.py
MLModelRunner/gRPCModelRunner/test/: aqua_file.ll  bubblesort.ll  newPredColor.json  predColor.json
MLModelRunner/gRPCModelRunner/test/SampleData/: fib.c  fib2.c  fib2.ll  fib3.c
MLModelRunner/gRPCModelRunner/test/jsonfiles/: fib2.json
SerDes/: CMakeLists.txt  JSON.cpp  TensorSpec.cpp  bitstreamSerDes.cpp  jsonSerDes.cpp  protobufSerDes.cpp  tensorflowSerDes.cpp
cmake/modules/: TensorFlowCompile.cmake
d0/d16/: C_2ONNXModelRunner_8h.html  C_2ONNXModelRunner_8h_source.html
d0/d19/: baseSerDes_8h__incl.map  baseSerDes_8h__incl.md5
d0/d26/: classMLBridge_1_1BaseSerDes-members.html
docs/: Doxyfile
include/: test.h
llvm-grpc/: CMakeLists.txt  README.md  driver.py
llvm-grpc/Include/: gRPCUtil.h
llvm-grpc/Include/Service/RegisterAllocation/: RegisterAllocation.pb.h
llvm-grpc/Include/Service/RegisterAllocationInference/: RegisterAllocationInference.pb.h
llvm-grpc/Protos/: RegisterAllocation.proto  RegisterAllocationInference.proto  example.proto
llvm-grpc/Python-Utilities/: .gitignore  RegisterAllocationInference_pb2.py  RegisterAllocationInference_pb2_grpc.py  RegisterAllocation_pb2.py  RegisterAllocation_pb2_grpc.py  client.py  client_demo.py  demoPass_pb2.py  demoPass_pb2_grpc.py  example_client.py  example_pb2.py  example_pb2_grpc.py  loopDistributionClient.py  server.py
llvm-grpc/src/: gRPCUtil.cc
llvm-grpc/test/: McGill_chomp_531_32.ll  predColor.json
llvm-grpc/test/SampleData/: fib.c  fib.ll  fib.s  fib2.c  fib2.s  fib3.c  fib3.ll  fib3.s
llvm-grpc/test/jsonfiles/: fib.json  fib3.json
llvm-inference-engine/: CMakeLists.txt  README.md  agent.cpp  minimal.cc  onnx.cpp
llvm-inference-engine/Include/: agent.h  driver.h  environment.h  onnx.h  utils.h
llvm-inference-engine/rl-inference/: ___CMakeLists.txt  agent.h  environment.h  observation-space.h
llvm-serializer/: CMakeLists.txt
llvm-serializer/include/: TensorSpec.h  baseSerializer.h  bitstreamSerializer.h  deserializer.h  jsonSerializer.h  protobufSerializer.h
llvm-serializer/src/: TensorSpec.cpp  bitstreamSerializer.cpp  jsonSerializer.cpp  protobufSerializer.cpp
python-interface/: SerDes.py  hello-mlbridge.py  log_reader.py  mlbridge-test.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+110 more)
test/: CMakeLists.txt  MLBridgeTest.cpp  hello-mlbridge.py  mlbridge-test.py  mlbridge-test.sh
test/include/: HelloMLBridge_Env.h  ProtosInclude.h
test/inference/: HelloMLBridge_Env.h
test/onnx/: dummy_model.onnx
test/protos/: MLBridgeTest_bool.proto  MLBridgeTest_char.proto  MLBridgeTest_double.proto  MLBridgeTest_float.proto  MLBridgeTest_int.proto  MLBridgeTest_long.proto  MLBridgeTest_vec_double.proto  MLBridgeTest_vec_float.proto  MLBridgeTest_vec_int.proto  MLBridgeTest_vec_long.proto  helloMLBridge.proto
(+494 files in other folders)
